[RED] adjust changes for supplier model test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,9 @@ reqwest = { version = "0.12", features = ["json"] }
 getset = "0.1.2"
 dotenvy = "0.15.7"
 rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres"]}
+
+chrono = { version = "0.4", features = ["serde", "clock"] }
+uuid = { version = "1", features = ["v4"] } 
+
+[lib]
+path = "src/manajemen_supplier/lib.rs"
