--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -12,7 +12,9 @@ on:
   schedule:
     - cron: '26 14 * * 0'
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - staging
 
 # Declare default permissions as read only.
 permissions: read-all
