--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -12,9 +12,7 @@ on:
   schedule:
     - cron: '26 14 * * 0'
   push:
-    branches:
-      - main
-      - staging
+    branches: [ main ]
 
 # Declare default permissions as read only.
 permissions: read-all
