--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "buildingstore-be"
 version = "0.1.0"
 edition = "2024"
 
+
+[workspace]
+members = [".", "entity", "migration"]
+
 [dependencies]
 rocket = { version = "0.5.1", features = ["json", "secrets"] }
 dashmap = "5.5.3"
@@ -10,8 +14,9 @@ lazy_static = "1.4.0"
 reqwest = { version = "0.12", features = ["json"] }
 getset = "0.1.2"
 dotenvy = "0.15.7"
-rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres", "sqlx_sqlite"]}
-sqlx = { version = "0.7", features = ["migrate", "macros", "any"] }
 chrono = { version = "0.4", features = ["serde", "clock"] }
 uuid = { version = "1", features = ["v4"] }
 bcrypt = "0.17.0"
+sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "mock", "with-uuid", "with-chrono"] }
+entity = { path = "entity" }
+migration = { path = "migration" }
