ci: run ci/cd on pull requests to staging

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -6,6 +6,10 @@ on:
       - main
       - staging
   workflow_dispatch:
+  pull_request:
+    branches:
+      - main
+      - staging
 
 env:
   CARGO_TERM_COLOR: always
