--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ sqlx = { version = "0.7", features = ["migrate", "macros", "any"] }
 chrono = { version = "0.4", features = ["serde", "clock"] }
 uuid = { version = "1", features = ["v4"] }
 bcrypt = "0.17.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+mockall = "0.11"
+async-trait = "0.1"
