--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ chrono = { version = "0.4", features = ["serde", "clock"] }
 uuid = { version = "1", features = ["v4"] }
 bcrypt = "0.17.0"
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0"
