--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 rocket = { version = "0.5.1", features = ["json", "secrets"] }
+rocket_cors = "0.6"
 dashmap = "5.5.3"
 lazy_static = "1.4.0"
 reqwest = { version = "0.12", features = ["json"] }
